fix instructions pictures on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -231,3 +231,7 @@
 .modalx {
     font-size: 40px;
 }
+
+img {
+    max-width: 100%;
+}
